<resources>
    <string name="app_name">findhomeb</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">AIzaSyDkBbMU2HJ3FArzFL7wXDo-EvQFwdyF4IA</string>
    <string name="view">View</string>
    <string name="places">Places</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="kin_of_facility">Hello, What Kind of facility do you have?</string>
    <string name="all">All</string>
    <string name="hostel">Hostel</string>
    <string name="home">Home</string>
    <string name="hotel">Hotel</string>
    <string name="next">Next</string>
    <string name="a_hostel">A Hostel</string>
    <string name="a_homestel">A Homestel</string>
    <string name="a_house">A House</string>
    <string name="a_hotel">A Hotel</string>
    <string name="an_apartment">An Apartment</string>
    <string name="home_type">Home Type:</string>


    <string name="home_prompt">Choose a home type</string>
    <string name="room_type">Room Type</string>
    <string name="shared">Shared</string>
    <string name="select_the_room_types_available_in_your">Select the Room Types Available in Your</string>
    <string name="select_the_room_types_available_in_your_hostel">Select The Room Types Available in Your Hostel</string>
    <string name="four_in_a_room">Four In A Room</string>
    <string name="three_in_a_room">Three In A Room</string>
    <string name="two_in_a_room">Two In A Room</string>
    <string name="one_in_a_room">One In A Room</string>
    <string name="when_will_your_place_be_available_for_booking">When Will Your Place Be Available For Booking?</string>
    <string name="description">Description</string>
    <string name="write_a_short_description_of_your_place">Write a short description of your Place</string>
    <string name="set_the_title_and_description_of_your_place">Set The Title and Description of your Place</string>
    <string name="write_a_title">Write A Title</string>
    <string name="add_a_photo">Add a Profile Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="make_a_great_first_impression">Make a Great First Impression</string>
    <string name="one_time">One Time</string>
    <string name="range">Range</string>
    <string name="always">Always</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="manage_a_hostel_homestel_or_hotel">Manage a Hostel, Homestel, or Hotel</string>
    <string name="account">Account</string>
    <string name="bookings">Bookings</string>
    <string name="send_notification">Send Notification</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="set_the_basic_information_about_your_place">Set The Basic Information About Your Place</string>
    <string name="bedrooms">BedRooms</string>
    <string name="bathrooms">BathRooms</string>
    <string name="kitchen">Kitchen"    " </string>
    <string name="balcony">Balcony"   "</string>
    <string name="set_the_general_price_for_your_place">Set The General Price For Your Place</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="rental_peroid">Rental Peroid</string>
    <string name="set_the_default_price_for_your_hostel">Set The Default Price For Your Hostel</string>
    <string name="_4_in_a_room">4 in a Room</string>
    <string name="_3_in_a_room">3 In a Room</string>
    <string name="_2_in_a_room">2 In A Room</string>
    <string name="single_room">Single Room</string>
    <string name="price">Price</string>
    <string name="set_the_default_nighly_price_guests_will_see">Set The Default Nighly Price Guests will See</string>
    <string name="main_hall">Main Hall" "</string>
    <string name="per_night">Per Night</string>
    <string name="generator">Generator</string>
    <string name="tv_room">TV room</string>
    <string name="wifi">Wifi</string>
    <string name="airconditioning">Airconditioning</string>
    <string name="desk_workspace">Desk/Workspace</string>
    <string name="study_room">Study Room</string>
    <string name="cleaning_service">Cleaning Service</string>
    <string name="_24_hour_water_suply">24 hour Water Suply</string>
    <string name="shop">Shop</string>
    <string name="dstv">DSTV</string>
    <string name="shuttle_service">Shuttle Service</string>
    <string name="restuarant">Restuarant</string>
    <string name="basketball_court">BasketBall Court</string>
    <string name="snooker">Snooker</string>
    <string name="tenis_court">Tenis Court</string>
    <string name="gym">Gym</string>
    <string name="parking_space">Parking Space</string>
    <string name="disability_friendly">Disability Friendly</string>
    <string name="heating">Heating</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="essentials_towels_be_sheets_toilet_papers_pillows">Essentials(towels,be sheets,toilet papers,pillows)</string>
    <string name="select_the_right_amenities_for_your_place">Select The Right Amenities for Your Place</string>
    <string name="cctv_camera">CCTV camera</string>
    <string name="fire_extinguisher">Fire Extinguisher</string>
    <string name="_24_hour_security">24 hour Security</string>
    <string name="first_aid_kit">First Aid Kit</string>
    <string name="fire_detector">Fire Detector</string>
    <string name="upload_up_to_a_maximum_of_10_photos_of_your_place_including_your_outdoor_environment_room_types_and_indoor_environment">Upload Up To A Maximum of 10 Photos of your Place Including Your OutDoor Environment,Room Types, and Indoor Environment</string>
    <string name="add_photos">ADD PHOTOS</string>
    <string name="add_pictures_of_your_place">Add Pictures of Your Place</string>
    <string name="locate_your_place_for_guests">Locate Your Place For Guests</string>
    <string name="optional">Optional</string>
    <string name="ghana_post_address">Ghana Post Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="finish">Finish</string>

    <string-array name="bed_rooms_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string-array name="rental_peroid_arrays">
        <item>One Year</item>
        <item>Two Years</item>
        <item>Three Years</item>
        <item>Four Years</item>
        <item>Five Years</item>
        <item>Six Years</item>
        <item>Seven Years</item>
        <item>Eight Years</item>
        <item>Nine Years</item>
        <item>Ten Years</item>
    </string-array>


    <string-array name="hostel_peroid_arrays">
        <item>Academic Year</item>
        <item>One Year</item>
        <item>Two Years</item>
        <item>Three Years</item>
        <item>Four Years</item>
        <item>Five Years</item>
    </string-array>

</resources>
