<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryFormoneFragment">


    <TextView
        android:id="@+id/textView"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:text="@string/kin_of_facility"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textSize="26sp"
            android:text="@string/a_hostel"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="#545454"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_house"
            android:textSize="26sp"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_marginTop="30dp"
            android:textColor="#545454"
            android:layout_marginStart="30dp"/>

       <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/an_apartment"
           android:layout_marginTop="30dp"
           android:textSize="26sp"
           android:fontFamily="sans-serif-smallcaps"
           android:textColor="#545454"
           android:layout_marginStart="30dp"/>




        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/a_hotel"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_marginTop="30dp"
            android:textColor="#545454"
            android:layout_marginStart="30dp"/>


    </RadioGroup>





    <android.support.design.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />





</android.support.constraint.ConstraintLayout>